@@ -47,3 +47,4 @@ foo:	jaw	foo
 	fcompll	28(%ebp)
 	fldlw	(%eax)
 	movl	$%ebx,%eax
+	insertq	$4,$2,%xmm2,%ebx
