@@ -49,3 +49,4 @@ foo:	jcxz foo	# No prefix exists to select CX as a counter
         pushfl		# can't have 32-bit stack operands
 	popfl		# can't have 32-bit stack operands
 	retl		# can't have 32-bit stack operands
+	insertq $4,$2,%xmm2,%ebx # The last operand must be XMM register.
